[gd_scene load_steps=7 format=3 uid="uid://dv56dvw112te8"]

[ext_resource type="Script" path="res://game/scripts/card.gd" id="1_6xtnm"]
[ext_resource type="Texture2D" uid="uid://dj51oy6ud047g" path="res://data/sprites/cards/imgnotfind.svg" id="2_e2ik7"]
[ext_resource type="Theme" uid="uid://b1ktcbwssx6qr" path="res://data/them/game.tres" id="4_8hexg"]
[ext_resource type="FontFile" uid="uid://bj37slmth16by" path="res://data/fonts/DischargePro.ttf" id="5_kh32j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hjye5"]
size = Vector2(256, 368)

[sub_resource type="Theme" id="Theme_u4k4d"]
Label/colors/font_color = Color(1, 1, 1, 1)
Label/font_sizes/font_size = 28
Label/fonts/font = ExtResource("5_kh32j")

[node name="Card" type="Node2D"]
script = ExtResource("1_6xtnm")

[node name="CardSprite_Button" type="TouchScreenButton" parent="."]
position = Vector2(-128, -184)
scale = Vector2(1, 1)
texture_normal = ExtResource("2_e2ik7")
shape = SubResource("RectangleShape2D_hjye5")

[node name="Name" type="Label" parent="."]
offset_left = -128.0
offset_top = -184.0
offset_right = 128.0
offset_bottom = -128.0
theme = ExtResource("4_8hexg")
theme_type_variation = &"CardName"
text = "Name
"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Description" type="Label" parent="."]
offset_left = -128.0
offset_top = 104.0
offset_right = 128.0
offset_bottom = 183.0
theme = ExtResource("4_8hexg")
theme_type_variation = &"CardDescription"
text = "Description
"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -184.0
offset_right = 128.0
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_u4k4d")
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="CardSprite_Button" to="." method="_on_card_sprite_button_pressed"]
[connection signal="mouse_entered" from="Control" to="." method="_on_control_mouse_entered"]
[connection signal="mouse_exited" from="Control" to="." method="_on_control_mouse_exited"]
